<resources>
    <string name="title_email_icon">Email</string>
    <string name="email_address">werken@ordina.nl</string>
    <string name="email_subject">Ik heb een vraag</string>
    <string name="email_type">message/rfc822</string>
    <string name="email_choose_message">Choose an Email client :</string>
    <string name="title_alwin_tan">ALWIN TAN (JUNIOR TECHNICAL CONSULTANT)</string>
    <string name="title_mark_mulder">MARK MULDER (JUNIOR TECHNICAL CONSULTANT)</string>
    <string name="title_mark_de_munnik">MARK DE MUNNIK (JUNIOR TECHNICAL CONSULTANT)</string>
    <string name="title_jalal_mekmassi">JALAL MEKMASSI (JUNIOR TECHNICAL CONSULTANT)</string>
    <string name="title_sabrina_wilbrink_podesta">SABRINA WILBRINK-PODESTA (JUNIOR INFORMATIE ANALIST)</string>
    <string name="title_tjeerdjan_nieuwenhuis">TJEERDJAN NIEUWENHUIS (JAVA SOFTWARE ENGINEER)</string>
    <string name="title_sergio_taytelbaum">SERGIO TAYTELBAUM (JAVA SOFTWARE ENGINEER)</string>
    <string name="text_alwin_tan">“Ik heb Bewegingswetenschappen gestudeerd aan de Vrije Universiteit in Amsterdam.
        Na mijn studie was het moeilijk om een baan te vinden in die sector. Ik heb besloten om mij open te stellen voor alle mogelijkheden.
        Tijdens een bezoek op de carrièrebeurs kwam ik bij de stand van Ordina terecht.
        Ik had het gevoel dat Ordina openstond voor mensen die een start willen maken in de IT-wereld, waarbij een IT-opleiding geen must was.
        Die instelling en de mogelijkheden om jezelf te ontwikkelen, waren voor mij belangrijke argumenten om bij Ordina een start te maken in de IT-wereld.“
    </string>
    <string name="text_mark_mulder">“Ordina geeft mij het gevoel dat ik verder kan groeien en mag ontdekken waar ik nog meer goed in ben.
        Naast dit gevoel voel ik ook de warme en open sfeer binnen het bedrijf. Daarom heb ik voor Ordina gekozen.”
    </string>
    <string name="text_mark_de_munnik">“De sfeer binnen Ordina zou ik typeren als warm, informeel en relaxed. Je krijgt als Young Professional veel ruimte om jezelf te ontwikkelen.
        Dankzij het uitgebreide opleidingsprogramma kun je in korte tijd enorm veel leren. Door de goede mix van deze factoren heb ik gekozen voor Ordina.”
    </string>
    <string name="text_jalal_mekmassi">“Ordina is een warm bedrijf en er heerst een ontspannen sfeer. Het is voor Young Professionals, naast een uitgebreid opleidingsprogramma,
        erg belangrijk mensen kunnen ontmoeten en ideeën uit te wisselen. Dit wordt volledig ondersteund door Ordina en is daarom een leuk bedrijf om voor te mogen werken.“
    </string>
    <string name="text_sabrina_wilbrink_podesta">“Met een achtergrond als Dierwetenschapper en meerdere jaren ervaring als onderzoeker en kwaliteitsmanager,
        lijkt Ordina misschien niet direct een logische vervolgstap. Ik was echter op zoek naar een baan met uitdaging,
        afwisseling, dynamiek en gave projecten waarbij je echt iets kunt betekenen voor bedrijven en voor de mens.
        En dat is precies wat ik bij Ordina gevonden heb. Bovendien sprak de sfeer me direct aan; informeel, creatief en enthousiast.”
    </string>
    <string name="text_tjeerdjan_nieuwenhuis">“Ordina is een bedrijf dat ook kansen biedt aan mensen die geen traditionele IT-achtergrond hebben.
        Met mijn studie Geschiedenis was het lastig een baan te vinden.
        Met Ordina heb ik een werkgever gevonden die mij de tijd en ruimte geeft om me te herscholen in de IT-wereld.“</string>
    <string name="text_sergio_taytelbaum">“Ik ben afgestudeerd in de Bewegingswetenschappen aan de Vrije Universiteit in Amsterdam.
        Tijdens de carrièrebeurs viel de open, informele en professionele cultuur van Ordina mij meteen op.
        De ontwikkelingskansen bij Ordina in de vorm van trainingen en cursussen zijn ideaal voor een ieder die zich wilt blijven ontwikkelen binnen de ICT.
        Hierdoor was de keuze snel gemaakt en wist ik dat ik bij Ordina moest zijn om persoonlijke doelen te behalen.“</string>
    <string name="app_name">OrdinaRecruitmentApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_waarom_ordina">WAAROM ORDINA?</string>
    <string name="title_activity_wat_doet_ordina">WAT DOET ORDINA?</string>
    <string name="title_activity_young_professional_programma">YP PROGRAMMA</string>
    <string name="young_professionals">Young Professionals</string>
    <string name="text_button_afdelingen">AFDELINGEN</string>
    <string name="text_button_klanten">KLANTEN</string>
    <string name="text_button_projecten">PROJECTEN</string>
    <string name="title_activity_afdelingen">AFDELINGEN</string>
    <string name="title_activity_klanten">KLANTEN</string>
    <string name="title_activity_projecten">PROJECTEN</string>
    <string name="title_tab_afdelingen_technisch">TECHNISCH</string>
    <string name="title_tab_afdelingen_niet_technisch">NIET TECHNISCH</string>
    <string name="title_afdelingen_technisch_java" >Java</string>
    <string name="text_afdelingen_technisch_java1">250 medewerkers &amp; 30 Young Professionals</string>
    <string name="text_afdelingen_technisch_java2">Klanten: Eneco, BelastingDient, NS</string>
    <string name="text_afdelingen_technisch_java3">Spring, JPA/Hibernate, Maven, NetBeans, IntelliJ, Eclipse</string>
    <string name="text_afdelingen_technisch_java4">Oracle certificering (OCA/OCP), Agile, KISS</string>
    <string name="title_afdelingen_technisch_microsoft">Microsoft</string>
    <string name="text_afdelingen_technisch_microsoft1">135 medewerkers &amp; 25 Young Professionals</string>
    <string name="text_afdelingen_technisch_microsoft2">Klanten: Eneco, BelastingDienst, NS</string>
    <string name="text_afdelingen_technisch_microsoft3">ASP.NET MVC, Advanced .NET, HTML/CSS, Azure</string>
    <string name="text_afdelingen_technisch_microsoft4">Agile, Design Patterns, Microsoft Stack</string>
    <string name="title_afdelingen_technisch_testing">Testing</string>
    <string name="text_afdelingen_technisch_testing1">135 medewerkers &amp; 25 Young Professionals></string>
    <string name="text_afdelingen_technisch_testing2">Klanten: Eneco, Belastingdienst, NS</string>
    <string name="text_afdelingen_technisch_testing3">QTP, Selenium IDE, FitNesse, HTML/XML/SOA</string>
    <string name="text_afdelingen_technisch_testing4">Agile, TMAP Next, Security &amp; Mobile testing</string>
    <string name="title_afdelingen_technisch_opsengineer">OPS-engineer</string>
    <string name="text_afdelingen_technisch_ops1">135 medewerkers &amp; 25 Young Professionals</string>
    <string name="text_afdelingen_technisch_ops2">Klanten: Rabobank, Min. Binnenlandse Zaken, ...</string>
    <string name="text_afdelingen_technisch_ops3">Shell-scripting, Python, Puppet, Tomcat</string>
    <string name="text_afdelingen_technisch_ops4">Blah, blah, blah</string>
    <string name="title_afdelingen_niet_technisch_sales" >Sales</string>
    <string name="text_afdelingen_niet_technisch_sales1">Blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_sales2">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_sales3">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_sales4">Blah, blah, blah, blah</string>
    <string name="title_afdelingen_niet_technisch_recruitment">Recruitment</string>
    <string name="text_afdelingen_niet_technisch_recruitment1">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_recruitment2">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_recruitment3">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_recruitment4">Blah, blah, blah, blah</string>
    <string name="title_afdelingen_niet_technisch_consultancy">Consultancy</string>
    <string name="text_afdelingen_niet_technisch_consultancy1">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_consultancy2">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_consultancy3">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_consultancy4">Blah, blah, blah, blah</string>
    <string name="title_afdelingen_niet_technisch_anders">Iets anders</string>
    <string name="text_afdelingen_niet_technisch_anders1">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_anders2">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_anders3">Blah, blah, blah, blah</string>
    <string name="text_afdelingen_niet_technisch_anders4">Blah, blah, blah, blah</string>
    <string name="text_projecten_prorail">Prorail text. Een Computer Vision-oplossing om de wereld buiten digitaal te vergelijken met het spoorontwerp binnen.
        Ordina gaat de oplossing realiseren met OpenCV beeldherkenning en videoverwerking in combinatie met moderne JavaFX- en FME Geo-technologie.
        Aansluitend aan de bouw zal ook het beheer vijf jaar bij Ordina komen te liggen.</string>
    <string name="text_projecten_politie">Politie text. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen.
        Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde
        om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting.
    </string>
    <string name="text_projecten_rabobank">Rabobank text. Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen.
        Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde
        om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting.
    </string>
    <string name="title_yp_programma1">2 Jarige opleidingsprogramma</string>
    <string name="text_yp_programma1">6-8 Weken intensieve basisopleiding</string>
    <string name="text_yp_programma2">Persoonlijke groei en zelfregie</string>
    <string name="text_yp_programma3">Trainingen worden verzorgd door ervaren docenten van de Ordina Academy</string>
    <string name="text_yp_programma4">Young professionals ontwikkelen zich tot vakinhoudelijke professionals die het verschil maken</string>
    <string name="text_yp_programma5">Sinds 2011 heeft Ordina al meer dan 90 Young Professionals opgeleid!</string>
    <string name="title_yp_programma3">Opdrachten</string>
    <string name="text_yp_programma6">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulpu Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </string>
    <string name="title_yp_programma4">Coaching</string>
    <string name="klanten_activity_text">lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempo inciddunt ut labore et dolore magna alique.
        Ut eni, ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex</string>
</resources>